add_task scrollbar fix

--- a/add_task/responsive.css
+++ b/add_task/responsive.css
@@ -61,7 +61,7 @@
 
 @media (max-width: 1230px) {
       #subtask-content {
-        height: 44px;
+        height: 70px;
     }
 
     body {
@@ -73,7 +73,8 @@
     }
 
     #task-form-container {
-        overflow: visible;
+       overflow-y: scroll;
+         scrollbar-width: none;  
     }
 
     .low-container input::placeholder {
@@ -100,7 +101,6 @@
     .task-content-container {
         background: linear-gradient(0deg, rgba(245, 246, 247, 1) 99%, rgb(223, 224, 225) 100%);
         flex-direction: column;
-        overflow-y: auto;
         min-height: 93dvh;
         height: auto;
     }
@@ -174,6 +174,10 @@
 
     #task-overlay .mobile-required-text {
         margin-bottom: 140px;
+    }
+
+     .edit-overlay .mobile-required-text {
+        margin-bottom: 100px;
     }
 
     .drop-down-arrow-svg,
