--- a/add_task/task_style.css
+++ b/add_task/task_style.css
@@ -3,6 +3,7 @@ body {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
     font-weight: 700;
+    overflow-y: hidden;
 }
 
 * {
